fix modal spacing

--- a/app/components/common/Modal.module.css
+++ b/app/components/common/Modal.module.css
@@ -17,7 +17,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  padding: var(--spacing8);
+  padding: var(--spacing7);
   box-shadow: 21px -16px 64px -36px rgba(0,0,0,0.25),
   -21px 16px 64px -36px rgba(0,0,0,0.25);
   overflow: scroll;
